--- a/manifest.json
+++ b/manifest.json
@@ -11,13 +11,12 @@
     ],
    "description": "Displays a smurf status evaluation on FaceIT Profiles",
    "icons": {
-      "128": "icons/ow128.png",
-      "16": "icons/ow16.png",
-      "48": "icons/ow48.png"
+      "128": "icons/fsc128.png",
+      "16": "icons/fsc16.png",
+      "48": "icons/fsc48.png"
    },
    "manifest_version": 2,
-   "name": "Smurf Checker for FaceIT",
+   "name": "FACEIT Smurf Checker",
    "permissions": [ "*://www.faceit.com/en/*", "*://steamcommunity.com/*", "https://api.steampowered.com/*" ],
-   "update_url": "https://clients2.google.com/service/update2/crx",
    "version": "1.0.0"
 }
